# mujoco-robotics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ISAACLAB_STYLE_REFACTOR_DRAFT.md  PROJECT_STRUCTURE_PHASES.md  README_reach_task_parameters.md
notes/: 01_3d_rotations_and_quaternions.md  02_jacobian_and_inverse_kinematics.md  03_rl_environment.md  04_mujoco_physics.md  05_ppo_training.md  README.md
notes/sk/: 01_3d_rotacie_a_quaterniony.md  02_jacobian_a_inverzna_kinematika.md
scripts/: diag_all_variants.py  diag_env.py  eval_lift_suction.py  eval_reach.py  test_ik_hold_video.py  train.py  train_skrl_reach.py
src/mujoco_robot/: __init__.py
src/mujoco_robot/assets/: __init__.py  actuators.py  configs.py  ur3e.xml  ur5e.xml
src/mujoco_robot/assets/meshes/epick/: NOTICE.txt
src/mujoco_robot/assets/meshes/ur3e/: NOTICE.txt
src/mujoco_robot/core/: __init__.py  collision.py  ik_controller.py  xml_builder.py
src/mujoco_robot/envs/: __init__.py  base_env.py  lift_suction_env.py  manager_runtime.py  reach_env.py  slot_sorter_env.py  step_result.py
src/mujoco_robot/envs/lift_suction/: __init__.py  lift_suction_env.py
src/mujoco_robot/envs/manager_based/: __init__.py  base_rl_env.py
src/mujoco_robot/envs/reach/: __init__.py  goals.py  kinematics.py  reach_env_base.py  reach_env_ik_abs.py  reach_env_ik_rel.py  reach_env_joint_pos.py  reach_env_joint_pos_isaac_reward.py  rendering.py  resetting.py  rewarding.py
src/mujoco_robot/envs/reach/mdp/: __init__.py  actions.py  config.py  managers.py  observations.py  rewards.py  terms.py
src/mujoco_robot/envs/slot_sorter/: __init__.py  slot_sorter_env.py
src/mujoco_robot/robots/: __init__.py  actuators.py  configs.py  ur3e.xml  ur5e.xml
src/mujoco_robot/scripts/: eval_lift_suction.py  eval_reach.py  teleop.py  train.py  visual_smoke.py
src/mujoco_robot/tasks/: __init__.py  registry.py
src/mujoco_robot/tasks/cable_routing/: __init__.py  cable_routing_env.py  config.py  factory.py
src/mujoco_robot/tasks/lift_suction/: __init__.py  config.py  factory.py  lift_suction_env.py
src/mujoco_robot/tasks/manager_based/: __init__.py
src/mujoco_robot/tasks/manager_based/manipulation/: __init__.py
src/mujoco_robot/tasks/manager_based/manipulation/reach/: __init__.py  reach_env.py  reach_env_cfg.py
src/mujoco_robot/tasks/manager_based/manipulation/reach/config/: __init__.py
src/mujoco_robot/tasks/manager_based/manipulation/reach/config/ur3e/: __init__.py  ik_abs_env_cfg.py  ik_rel_env_cfg.py  joint_pos_env_cfg.py
src/mujoco_robot/tasks/manager_based/manipulation/reach/config/ur5e/: __init__.py  ik_abs_env_cfg.py  ik_rel_env_cfg.py  joint_pos_env_cfg.py
src/mujoco_robot/tasks/manager_based/manipulation/reach/mdp/: __init__.py  commands.py  config.py  curriculum.py  events.py  managers.py  rewards.py
src/mujoco_robot/tasks/reach/: __init__.py  config.py  factory.py  goals.py  info.py  reach_env.py  reach_env_base.py  reach_env_cfg.py  reach_env_ik_abs.py  reach_env_ik_rel.py  reach_env_joint_pos.py  reach_env_joint_pos_isaac_reward.py  rendering.py  resetting.py  rewarding.py  scene_builder.py  success_tracker.py
src/mujoco_robot/tasks/reach/config/: __init__.py  ur3e.py  ur5e.py
src/mujoco_robot/tasks/reach/mdp/: __init__.py  actions.py  config.py  managers.py  observations.py  rewards.py  terminations.py  terms.py
src/mujoco_robot/tasks/slot_sorter/: __init__.py  config.py  factory.py  slot_sorter_env.py
src/mujoco_robot/teleop/: __init__.py  gamepad.py  gui.py  keyboard.py
src/mujoco_robot/training/: __init__.py  callbacks.py  eval_lift_suction.py  eval_reach.py  ppo_config.py  reach_cli.py  train_cable_routing.py  train_reach.py  train_reach_skrl.py  train_slot_sorter.py  train_suction.py
tests/: test_diag_all_variants.py  test_ik_hold.py  test_reach_manager_based_cfg.py  test_reach_manager_based_runtime_smoke.py  test_reach_mdp_modular.py  test_reach_training_cli.py  test_reach_variants.py  test_robot_actuators.py  test_task_registry.py  test_xml_builder.py
