[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-robot"
version = "0.2.0"
description = "MuJoCo RL environments for UR robot arms — reach and slot-sorter tasks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mujoco-robot contributors"},
]

dependencies = [
    "mujoco>=3.1",
    "numpy",
    "gymnasium>=1.0",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.0",
    "imageio[ffmpeg]",
    "tensorboard",
]
train-skrl = [
    "skrl>=1.4",
]
gamepad = [
    "pygame",
]
gui = [
    "Pillow",
]
dev = [
    "pytest>=7.0",
    "mujoco-robot[train,train-skrl,gamepad,gui]",
]

[project.scripts]
mr-train  = "mujoco_robot.training.train_reach:main"
mr-eval-reach = "mujoco_robot.training.eval_reach:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"mujoco_robot.assets" = ["*.xml", "meshes/**/*.obj", "meshes/**/*.stl", "meshes/**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
