[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-robot"
version = "0.2.0"
description = "MuJoCo RL environments for UR robot arms — reach and slot-sorter tasks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mujoco-robot contributors"},
]

dependencies = [
    "mujoco>=3.1",
    "numpy",
    "gymnasium>=1.0",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.0",
    "imageio[ffmpeg]",
    "tensorboard",
]
train-skrl = [
    "skrl>=1.4",
]
gamepad = [
    "pygame",
]
gui = [
    "Pillow",
]
dev = [
    "pytest>=7.0",
    "mujoco-robot[train,train-skrl,gamepad,gui]",
]

[project.scripts]
mr-train  = "mujoco_robot.training.train_reach:main"
mr-eval-reach = "mujoco_robot.training.eval_reach:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"mujoco_robot.assets" = ["*.xml", "meshes/**/*.obj", "meshes/**/*.stl", "meshes/**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "N802",   # function name should be lowercase (MuJoCo callbacks)
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "SIM108", # use ternary operator (readability)
    "UP007",  # use X | Y for union types (keep Optional for clarity)
]

[tool.ruff.lint.isort]
known-first-party = ["mujoco_robot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
